# api/handler/user/user.go
@@ -27,9 +27,10 @@ func NewUserHandler(group *gin.RouterGroup, srvc service.ServiceInterface, confi
 	user := group.Group("/user")
 	{
 		user.POST("/", handler.Create)
-		// user.GET("/:id", handler.GetByID)
-		// user.PUT("/:id", handler.Update)
-		// user.DELETE("/:id", handler.Delete)
+		user.PATCH("/:id", handler.Update)
+		user.GET("/:id", handler.GetById)
+		user.GET("/search", handler.GetList)
+		user.DELETE("/:id", handler.Delete)
 	}
 }
 
@@ -40,7 +41,7 @@ func NewUserHandler(group *gin.RouterGroup, srvc service.ServiceInterface, confi
 // @Accept 			json
 // @Produce 		json
 // @Param 			user body user_dto.UserCreate true "User Create"
-// @Success 		201 {object} statushttp.Response "User created successfully"
+// @Success 		201 {object} pg.Id "User created successfully"
 // @Failure 		400 {object} statushttp.Response "Bad Request"
 // @Failure 		500 {object} statushttp.Response "Internal Server Error"
 // @Router 			/user [post]
@@ -63,4 +64,169 @@ func (h *userHandler) Create(c *gin.Context) {
 	}
 
 	statushttp.Created(c, pg.Id{Id: id})
+}
+
+// Update 			godoc
+// @Summary 		user-service-update
+// @Description 	user-service-update
+// @Tags 			User Service
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path int64 true "Id"
+// @Param 			user body user_dto.UserUpdate true "User Update"
+// @Success 		204
+// @Failure 		400 {object} statushttp.Response "Bad Request"
+// @Failure 		500 {object} statushttp.Response "Internal Server Error"
+// @Router 			/user/{id} [put]
+func (h *userHandler) Update(c *gin.Context) {
+	var in user_dto.UserUpdate
+
+	{
+		if err := c.ShouldBindJSON(&in); err != nil {
+			statushttp.BadRequest(c, err.Error())
+			return
+		}
+	}
+
+	id, err := statushttp.GetId(c)
+	if err != nil {
+		statushttp.BadRequest(c, err.Error())
+		return
+	}
+
+	in.Id = id
+
+	if err := h.srvc.Update(c.Request.Context(), &in); err != nil {
+		statushttp.InternalServerError(c, err.Error())
+		return
+	}
+
+	statushttp.NoContent(c)
+}
+
+// GetList 			godoc
+// @Summary 		user-service-get-list
+// @Description 	user-service-get-list
+// @Tags 			User Service
+// @Accept 			json
+// @Produce 		json
+// @Param			page query int true "Page number"
+// @Param			limit query int true "Page size"
+// @Param 			input query user_dto.UserParams false "Filter parameters"
+// @Success 		200 {object} user_dto.UserPage "User list retrieved successfully"
+// @Failure 		400 {object} statushttp.Response "Bad Request"
+// @Failure 		500 {object} statushttp.Response "Internal Server Error"
+// @Router 			/user [get]
+func (h *userHandler) GetList(c *gin.Context) {
+	var in user_dto.UserParams
+
+	{
+		if err := c.ShouldBindQuery(&in); err != nil {
+			statushttp.BadRequest(c, err.Error())
+			return
+		}
+	}
+
+	page, limit, err := statushttp.GetPageLimit(c)
+	if err != nil {
+		statushttp.BadRequest(c, err.Error())
+		return
+	}
+
+	items, err := h.srvc.Page(c.Request.Context(), &in, page, limit)
+	{
+		if err != nil {
+			statushttp.InternalServerError(c, err.Error())
+			return
+		}
+	}
+
+	statushttp.OK(c, items)
+}
+
+// Search 			godoc
+// @Summary 		user-service-search
+// @Description 	user-service-search
+// @Tags 			User Service
+// @Accept 			json
+// @Produce 		json
+// @Param 			input query user_dto.UserParams true "Filter parameters"
+// @Success 		200 {array}  user_dto.User "User list retrieved successfully"
+// @Failure 		400 {object} statushttp.Response "Bad Request"
+// @Failure 		500 {object} statushttp.Response "Internal Server Error"
+// @Router 			/user/search [get]
+func (h *userHandler) Search(c *gin.Context) {
+	var in user_dto.UserParams
+
+	{
+		if err := c.ShouldBindQuery(&in); err != nil {
+			statushttp.BadRequest(c, err.Error())
+			return
+		}
+	}
+
+	items, err := h.srvc.Find(c.Request.Context(), &in)
+	{
+		if err != nil {
+			statushttp.InternalServerError(c, err.Error())
+			return
+		}
+	}
+
+	statushttp.OK(c, items)
+}
+
+// GetById 			godoc
+// @Summary 		user-service-get-by-id
+// @Description 	user-service-get-by-id
+// @Tags 			User Service
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path int64 true "Id"
+// @Success 		200 {object} user_dto.User "User retrieved successfully"
+// @Failure 		400 {object} statushttp.Response "Bad Request"
+// @Failure 		500 {object} statushttp.Response "Internal Server Error"
+// @Router 			/user/{id} [get]
+func (h *userHandler) GetById(c *gin.Context) {
+	id, err := statushttp.GetId(c)
+	if err != nil {
+		statushttp.BadRequest(c, err.Error())
+		return
+	}
+
+	item, err := h.srvc.FindOne(c.Request.Context(), &pg.Id{Id: id})
+	{
+		if err != nil {
+			statushttp.InternalServerError(c, err.Error())
+			return
+		}
+	}
+
+	statushttp.OK(c, item)
+}
+
+// Delete 			godoc
+// @Summary 		user-service-delete
+// @Description 	user-service-delete
+// @Tags 			User Service
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path int64 true "Id"
+// @Success 		204
+// @Failure 		400 {object} statushttp.Response "Bad Request"
+// @Failure 		500 {object} statushttp.Response "Internal Server Error"
+// @Router 			/user/{id} [delete]
+func (h *userHandler) Delete(c *gin.Context) {
+	id, err := statushttp.GetId(c)
+	if err != nil {
+		statushttp.BadRequest(c, err.Error())
+		return
+	}
+
+	if err := h.srvc.Delete(c.Request.Context(), &pg.Id{Id: id}); err != nil {
+		statushttp.InternalServerError(c, err.Error())
+		return
+	}
+
+	statushttp.NoContent(c)
 }
